# userchown

./: CMakeLists.txt  Makefile  README  README.md  TODO  config.c  file.c  permissions.c  phnxchown.cfg  phnxchown.spec  setup.sh  userchown.c  userchown.spec  util.c
cfg/: phnxchown.cfg  test.cfg
include/: config.h  exitcodes.h  file.h  permissions.h  user.h  userchown.h  util.h
man/: CMakeLists.txt  phnxchown.txt  userchown.txt
src/: CMakeLists.txt  config.c  file.c  permissions.c  user.c  userchown.c  util.c
